--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <Title> yaver jadoooo</title>
 </Head>
 <Body>
+<Center>
 <Marquee>
+<Font size="200%" color="red">
 <H1>
-Yaver bsdka madarchod gandoooo chutya 
+Yaver bsdka <be>madarchod <be>gandoooo chutya 
 </H1>
 </Body>
 <Html>
