--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <Marquee>
 <Font size="200%" color="red">
 <H1>
-Yaver bsdka <be>madarchod <be>gandoooo chutya 
+Yaver bsdka <br>madarchod <br>gandoooo chutya 
 </H1>
 </Body>
 <Html>
