--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </Head>
 <Body>
 <Center>
-<Marquee>
+<Marquee direction="down">
 <Font size="200%" color="red">
 <H1>
 Yaver bsdka <br>madarchod <br>gandoooo chutya 
