--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <Title> yaver jadoooo</title>
 </Head>
 <Body>
+<audio controls autoplay>
+  <source src="horse.ogg" type="audio/ogg">
+  <source src="horse.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+</audio>
 <Center>
 <Marquee direction="down">
 <Font size="200%" color="red">
