--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 </Head>
 <Body>
 <audio controls autoplay>
-  <source src="horse.ogg" type="audio/ogg">
-  <source src="horse.mp3" type="audio/mpeg">
+  <source src="Lazy Walk - Cheel.mp3" type="audio/mpeg">
   Your browser does not support the audio element.
 </audio>
 <Center>
