--- a/index.html
+++ b/index.html
@@ -3,10 +3,8 @@
 <Title> yaver jadoooo</title>
 </Head>
 <Body>
-<audio controls autoplay>
-  <source src="Lazy Walk - Cheel" type="audio/mpeg">
-  Your browser does not support the audio element.
-</audio>
+<iframe src="audio/source.mp3" allow="autoplay" style="display:none" id="iframeAudio">
+</iframe
 <Center>
 <Marquee direction="down">
 <Font size="200%" color="red">
