--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
 <Body>
 <iframe src="Lazy Walk - Cheel" allow="autoplay" style="display:none" id="iframeAudio">
 </iframe
+
+<iframe src="Lazy Walk - Cheel" allow="autoplay" id="audio" style="display: none"></iframe>
+<audio id="player" autoplay loop>
+    <source src="Lazy Walk - Cheel" type="audio/mp3">
+</audio>
 <Center>
 <Marquee direction="down">
 <Font size="200%" color="red">
