--- a/index.html
+++ b/index.html
@@ -1,35 +1,1 @@
-<html>
-<Head>
-<Title> yaver jadoooo</title>
-</Head>
-<Body>
-<iframe src="Lazy Walk - Cheel" allow="autoplay" style="display:none" id="iframeAudio">
-</iframe
-
-<iframe src="Lazy Walk - Cheel" allow="autoplay" id="audio" style="display: none"></iframe>
-<audio id="player" autoplay loop>
-    <source src="Lazy Walk - Cheel" type="audio/mp3">
-</audio>
-<Center>
-<Marquee direction="down">
-<Font size="200%" color="red">
-<H1>
-Yaver bsdka <br>madarchod <br>gandoooo chutya 
-</H1>
-<Br>
-<He>
-<Marquee direction="up">
-<Font size="200%" color="blue">
-<H1>
-Yaver bsdka <br>madarchod <br>gandoooo chutya 
-<Br> haram Ka pillaaa <br> Lalit lodu <br> pandit !!!?😂😂😂
-</H1>
-<Br>
-<Hr>
-<Marquee direction="down">
-<Font size="200%" color="yellow">
-<H1>
-Yaver bsdka <br>madarchod <br>gandoooo chutya 
-</H1>
-</Body>
-<Html>
+Good morning
